k8s/constraints/c-no-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoLatestTags
metadata:
  name: forbid-latest-and-unpinned
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
