k8s/constraints/c-require-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequireLimits
metadata:
  name: require-cpu-mem-limits-requests
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
